--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ierik/ts-utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "src/index.ts",
   "keywords": [],
@@ -25,5 +25,8 @@
   },
   "scripts": {
     "release": "standard-version && git push --follow-tags && npm publish"
+  },
+  "devDependencies": {
+    "standard-version": "^9.5.0"
   }
 }
