--- a/.github/release-publish.yaml
+++ b/.github/release-publish.yaml
@@ -1,39 +1,38 @@
 name: Publish release
+run-name: Publishing package to GitHub NPM Registry
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - master
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-
-      - name: Install dependencies
-        run: |
-          pnpm install
-
-  publish-gpr:
-    needs: build
+  build-publish:
     runs-on: ubuntu-latest
     permissions:
       packages: write
-      contents: read
+      contents: write
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref_name }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18.x
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
           registry-url: https://npm.pkg.github.com/
 
       - name: Install dependencies
         run: |
           pnpm install
 
-      - run: npm publish
+      - name: Set Git identity
+        run: |
+          git config --global user.name "Erik Isidore"
+          git config --global user.email "ericssonico@proton.me"
+
+      - run: pnpm run full-release
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NPM_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
