--- a/.github/workflows/release-publish.yaml
+++ b/.github/workflows/release-publish.yaml
@@ -33,6 +33,6 @@ jobs:
           git config --global user.name "Erik Isidore"
           git config --global user.email "ericssonico@proton.me"
 
-      - run: pnpm run full-release
+      - run: pnpm run release
         env:
           NPM_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
