Silly package.json syntax error

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "release": "standard-version && git push --follow-tags && npm publish",
-    "pre-release": "standard-version && git push --follow-tags",
+    "pre-release": "standard-version && git push --follow-tags"
   },
   "devDependencies": {
     "standard-version": "^9.5.0"
