--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@ierik/ts-utils",
-  "version": "1.0.4",
+  "version": "2.1.4",
   "description": "",
-  "main": "src/index.js",
-  "module": "src/index.js",
-  "types": "src/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "keywords": [],
   "author": "Erik isidore <ericssonico@proton.me>",
   "license": "GPL-3",
