--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "ESNext",
     "target": "ESNext",
     "moduleResolution": "Node",
+    "types": [],
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "strict": true,
 
@@ -14,5 +15,5 @@
     "isolatedModules": true,
     "declaration": true,
   },
-  "include": ["src"]
+  "include": ["./src/**/*"]
 }
